# OOCT-Final-Project

./: CMakeLists.txt  __global_vars__.h  main.cpp
screens/: login.cpp  login.h  success.cpp  success.h
windowHandler/: consoleBufferManager.cpp  consoleBufferManager.h  movementHandler.cpp  movementHandler.h  parentTerminal.cpp  parentTerminal.h  pseudoterminal.cpp  pseudoterminal.h  screenTemplate.cpp  screenTemplate.h
